--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,10 +9,7 @@
     </article>
     <div class="view__snippetBtnContainer">
       <%= link_to user_path(logged_in_user.id) do %>
-        <div id="returnBtn">Return</div>
-      <% end %>
-      <%= link_to edit_snippet_path(@category.id) do %>
-        <div class="snippetEditBtn">Edit</div>
+        <div class="catReturnBtn_show " >Return </div>
       <% end %>
     </div><br><br>
 
