--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,15 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= favicon_link_tag asset_path('bracket-favicon-2.svg') %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': true %>
+
+    <!-- Handles the turbolinks bs-->
+    <script type="text/javascript">
+      $( document ).on('turbolinks:load', function() {
+        console.log("It works on each visit!")
+      })
+    </script>
   </head>
   <body>
     <%= yield %>
