--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -57,7 +57,7 @@ html {
   }
   .catReturnBtn_show {
     height: 100%;
-    width: 40.75em;
+    width: 200%;
     line-height: 60px;
     color: #201D20;
     font-family: "Coolvetica Regular";
